--- a/gradients/screen.css
+++ b/gradients/screen.css
@@ -257,7 +257,7 @@ a {
   display: inline-block;
   text-decoration: none;
   line-height: 110%;
-  border-bottom: 2px dotted #BDD9D5;
+  border-bottom: 2px dotted rebeccapurple;
 }
 
 pre, .ex, .pre, .codelike {
@@ -332,7 +332,7 @@ div:not(.current).reduced {
 dt {
 	font-weight: bold;
 	margin-top: 0.5em;
-	background-color: #BDD9D5;;
+	background-color: rebeccapurple;;
 	display:inline-block;
 	margin-bottom: 2px;
 	clear: both;
@@ -375,12 +375,12 @@ ul.columns {
 .play {text-align: center;}
 .columns2 {
 	columns: 2 1em;
-	column-rule: 1px solid #BDD9D5;
+	column-rule: 1px solid rebeccapurple;
 }
 .object header {position:absolute; top: 10px; width: 100%; text-align:center; background-color: rgba(255,255,255,0.9); left:0;}
 .objectlink {position:absolute;top:0; right:0;color: white; background-color: rebeccapurple; padding: 3px 5px; border: none;}
 .slide.object {padding:0; overflow:scroll; }
-.object object {width: 98%; height: 100%;}
+.object object {width: 100%; height: 100%;}
 
 
 
