removed webkit prefixing and likely broke EVERYTHING

--- a/animations/static/project.css
+++ b/animations/static/project.css
@@ -18,8 +18,6 @@
    font-size: 120%;
 }
 .code2:hover {
-  -webkit-transform: scale(1.4);
-  -webkit-transform-origin: top left;
   transform: scale(1.4);
   transform-origin: top left;
 
@@ -44,9 +42,6 @@ table.icons * {margin:0;}
 }
 
 .columns {
-
-  -webkit-column-count:3;
-  -webkit-column-gap: 0.1em;
   column-count:3;
   column-gap: 0.1em;
 }
@@ -68,8 +63,6 @@ table.icons * {margin:0;}
   line-height: 140px;
   position: absolute;
   top: 0; left: 0;
-  -webkit-transition: all 1s ease-in 50ms;
-  -webkit-transform-origin: 100px 123px;
   transition: all 1s ease-in 50ms;
   transform-origin: 100px 123px;
 }
@@ -84,36 +77,26 @@ table.icons * {margin:0;}
   background-color:green;
 }
 .spin:hover {
-  -webkit-transform: rotate(360deg) scale(2);
   transform: rotate(360deg) scale(2);
 }
 
 .pencil_01 {
-    -webkit-animation: writing 3s infinite 1s;
-    -webkit-animation-play-state:paused;
     animation: writing 3s infinite 1s;
     animation-play-state:paused;
   }
 .pencil_03 {
-    -webkit-animation: writingDangerously 3s infinite linear;
-    -webkit-animation-play-state:paused;
     animation: writingDangerously 3s infinite linear;
     animation-play-state:paused;
   }
 .pencil_04 {
-    -webkit-animation: W 3s infinite linear;
-    -webkit-animation-play-state:paused;
     animation: W 3s infinite linear;
     animation-play-state:paused;
   }
 .pencil_05 {
-    -webkit-animation: gettingThePencil 3s infinite;
-    -webkit-animation-play-state:paused;
     animation: gettingThePencil 3s infinite;
     animation-play-state:paused;
   }
 .to {
-    -webkit-transform-origin: left 300px;
     transform-origin: left 300px;
   }
 .slide:hover .pencil_01,
@@ -124,19 +107,15 @@ table.icons * {margin:0;}
 .slide:hover .pencil_07,
 .slide:hover .pencilanim_01
  {
-  -webkit-animation-play-state:running;
  animation-play-state:running;
 }
  .pencil_pausing {
   left: 350px;
-  -webkit-transform-origin: center 300px;
-  -webkit-animation: writingInCircles 3s linear infinite;
   transform-origin: center 300px;
   animation: writingInCircles 3s linear infinite;
 
  }
   .pencil_pausing:hover {
-  -webkit-animation-play-state:paused;
   animation-play-state:paused;
 
  }
@@ -148,24 +127,8 @@ table.icons * {margin:0;}
   }
 
 }
-@-webkit-keyframes writingInCircles {
 
-  100% {
-    transform:
-      rotate(360deg);
-  }
 
-}
-
-@-webkit-keyframes writing {
-  0% {
-      left: 0;
-    }
-
-    100% {
-      left: 100%;
-    }
-}
 @keyframes writing {
   0% {
       left: 0;
@@ -175,23 +138,7 @@ table.icons * {margin:0;}
       left: 100%;
     }
 }
-@-webkit-keyframes writingDangerously {
-0% {
-      left: 0;
-    }
 
-    10% {
-      left: 45%;
-    }
-
-    90% {
-      left: 55%;
-    }
-
-    100% {
-      left: 100%;
-    }
-}
 @keyframes writingDangerously {
 0% {
       left: 0;
@@ -210,30 +157,6 @@ table.icons * {margin:0;}
     }
 }
 
-@-webkit-keyframes W {
-
-   0% {
-      left: 0;
-    top: 0;
-          }
-
-    25% {
-      top: 400px;
-    }
-
-    50% {
-      top: 50px;
-    }
-
-    75% {
-      top: 400px;
-    }
-
-    100% {
-      left: 80%;
-      top: 0;
-    }
-}
 @keyframes W {
 
    0% {
@@ -260,18 +183,6 @@ table.icons * {margin:0;}
 }
 
 
-@-wekbit-keyframes gettingThePencil {
-  0%{
-    -webkit-transform:
-      translate3d(0, 0, 0) rotate(0deg) scale(0.5, 0.5);
-  }
-
-  100% {
-    -webkit-transform:
-      translate3d(600px, 400px, 0) rotate(80deg) scale(1.2, 1.2);
-  }
-}
-
 @keyframes gettingThePencil {
   0%{
     transform:
@@ -284,17 +195,7 @@ table.icons * {margin:0;}
   }
 }
 
-@-webkit-keyframes drawALine {
-  0%{
-    width:0;
-    color:green;
-  }
 
-  100% {
-    width: 100%;
-    color:blue;
-  }
-}
 @keyframes drawALine {
   0%{
     width:0;
@@ -314,9 +215,6 @@ table.icons * {margin:0;}
 .slide nav ul li {list-style-type: none; background-color: red; color: white; margin:0; padding: 3px 5px; border: 1px solid #fff;}
 nav > ul > li {display: inline-block; position:relative; float: left; min-width: 120px;}
 nav ul ul {
-  -webkit-transform: scale(1,0);
-  -webkit-transform-origin: top center;
-  -webkit-transition:0.2s linear 50ms;
   transform: scale(1,0);
   transform-origin: top center;
   transition:0.2s linear 50ms;
@@ -325,7 +223,6 @@ nav ul ul {
   min-width: 100%;
 }
 nav li:hover ul {
-  -webkit-transform: scale(1,1);
   transform: scale(1,1);}
 
 .pencilanim {
@@ -341,12 +238,6 @@ nav li:hover ul {
   right: -10px;
 }
 .pencilanim_01 {
-  -webkit-transform-origin: left 300px;
-  -webkit-animation-name: drawALine;
-  -webkit-animation-duration: 3s;
-  -webkit-animation-timing-function: ease-in-out;
-  -webkit-animation-iteration-count: 3;
-  -webkit-animation-play-state: paused;
   transform-origin: left 300px;
   animation-name: drawALine;
   animation-duration: 3s;
@@ -363,12 +254,10 @@ pre u {text-decoration:none; font-weight:bold;}
   margin: auto;
   position: absolute;
   font-size: .8em;
-  -webkit-perspective: 600px;
   perspective: 600px;
 }
 .card:hover,
 .carda {
-  -webkit-transition: 1s ease;
   transition: 1s ease;
 }
 .card .front,
@@ -385,10 +274,6 @@ height: inherit;
   border: 10px solid #fff;
 text-align: center;
 box-shadow: 0 1px 5px rgba(0,0,0,0.9);
--webkit-transform: rotateX(0deg) rotateY(0deg);
--webkit-transform-style: preserve-3d;
--webkit-backface-visibility: hidden;
--webkit-transition: all .4s ease-in-out;
 transform: rotateX(0deg) rotateY(0deg);
 transform-style: preserve-3d;
 backface-visibility: hidden;
@@ -403,8 +288,7 @@ background-position: -1em -1em;
 
 }
 .card:hover .front {
-  z-index: 900;;
-  -webkit-transform: rotateY(180deg);
+  z-index: 900;
   transform: rotateY(180deg);
   box-shadow: 0 15px 50px rgba(0,0,0,0.2);
 }
@@ -419,10 +303,6 @@ background-position: -1em -1em;
   height: inherit;
   background: #fff;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
-  -webkit-transform: rotateY(-180deg);
-  -webkit-transform-style: preserve-3d;
-  -webkit-backface-visibility: hidden;
-  -webkit-transition: all .4s ease-in-out;
   transform: rotateY(-180deg);
   transform-style: preserve-3d;
   backface-visibility: hidden;
@@ -433,41 +313,33 @@ background-position: -1em -1em;
 }
 .card:hover .back {
   z-index: 1000;
-  -webkit-transform: rotateY(0);
   transform: rotateY(0);
 }
 .card:first-of-type,
 .carda:first-of-type {
-  -webkit-transform: rotate(-5deg);
   transform: rotate(-5deg);
 }
 .card:nth-of-type(2):hover,
 .carda.flipped:nth-of-type(2){
-  -webkit-transform: rotate(0) translatex(120px);
   transform: rotate(0) translatex(120px);
 }
 .card:last-of-type,
 .carda:last-of-type {
-  -webkit-transform: rotate(5deg);
   transform: rotate(5deg);
 }
 .card:first-of-type:hover{
-  -webkit-transform: rotate(10deg) translatey(180px);
   transform: rotate(10deg) translatey(180px);
 }
 .carda.flipped:first-of-type{
-  -webkit-transform: rotate(-5deg) translate(240px, 25px);
   transform: rotate(-5deg) translate(240px, 25px);
 }
 
 .carda.flipped .front,
 .carda.unflipped .back {
-  -webkit-animation: flipme 1s linear forwards;
   animation: flipme 1s linear forwards;
 }
 .carda.unflipped .front,
 .carda.flipped .back {
-  -webkit-animation: unflipme 1s linear both;
   animation: unflipme 1s linear both;
 }
 /*
@@ -478,14 +350,6 @@ background-position: -1em -1em;
 .carda.unflipped:nth-of-type(2){animation: flipme 1s linear -1s alternate;}
 .carda.unflipped:last-of-type  {animation: flipme 1s linear -1s alternate;}
 */
-@-webkit-keyframes flipme {
-  0% {transform: rotatey(0deg)}
-  100% {transform: rotateY(-180deg);}
-}
-@-webkit-keyframes unflipme {
-  0% {transform: rotatey(180deg)}
-  100% {transform: rotateY(0deg);}
-}
 @keyframes flipme {
   0% {transform: rotatey(0deg)}
   100% {transform: rotateY(-180deg);}
@@ -503,11 +367,7 @@ background-position: -1em -1em;
 .carda .back:after  {content: 'A'; position:absolute; top: 10px; left: 10px; line-height:20px;}
 .card .back:before,
 .carda .back:before {content: 'A'; position:absolute; bottom: 10px; right: 10px; line-height:20px;}
-@-webkit-keyframes showme {
-  0% {background-color:blue; transform: rotate(0deg) translate(200px, 0)}
-  50% {background-color:green;transform: rotate(22deg) translate(350px, -150px)}
-  100% {background-color: yellow; transform: rotate(45deg) translate(500px, -540px)}
-}
+
 @keyframes showme {
   0% {background-color:blue; transform: rotate(0deg) translate(200px, 0)}
   50% {background-color:green;transform: rotate(22deg) translate(350px, -150px)}
@@ -524,32 +384,24 @@ background-position: -1em -1em;
   width: 50px;
   height:50px;
   background-color: red;
-  -webkit-animation: showme 5s linear 5s 1;
-  -webkit-animation-play-state:paused;
-  -webkit-transform-origin: 50% 100%;
   animation: showme 5s linear 5s 1;
   animation-play-state:paused;
   transform-origin: 50% 100%;
 }
 .current:hover .box span {
-  -webkit-animation-play-state: running;
   animation-play-state: running;
 }
 span.afmforwards {
-  -webkit-animation-fill-mode:forwards;
   animation-fill-mode:forwards;
 }
 span.afmbackwards {
-  -webkit-animation-fill-mode:backwards;
   animation-fill-mode:backwards;
 }
 span.afmboth {
-  -webkit-animation-fill-mode:both;
   animation-fill-mode:both;
 }
 
 #animfillmodeall4.animationon .box span {
-  -webkit-animation: none;
   animation: none;
 }
 
