--- a/animations/static/scss/_ex_cards.scss
+++ b/animations/static/scss/_ex_cards.scss
@@ -10,7 +10,6 @@
 }
 .card:hover,
 .carda {
-  -webkit-transition: 1s ease;
   transition: 1s ease;
 }
 .card .front,
@@ -41,8 +40,7 @@ background-position: -1em -1em;
 
 }
 .card:hover .front {
-  z-index: 900;;
-  -webkit-transform: rotateY(180deg);
+  z-index: 900;
   transform: rotateY(180deg);
   box-shadow: 0 15px 50px rgba(0,0,0,0.2);
 }
@@ -94,7 +92,6 @@ background-position: -1em -1em;
 }
 .carda.unflipped .front,
 .carda.flipped .back {
-  -webkit-animation: unflipme 1s linear both;
   animation: unflipme 1s linear both;
 }
 
