--- a/grid/style.css
+++ b/grid/style.css
@@ -151,10 +151,10 @@ nav button {
   .slide header h1:first-child {
     margin-top: 0; }
 
-.intro p, header {
+.intro p, header, .divider p {
   text-align: center; }
 
-.intro header {
+.intro header, .divider header {
   font-size: 2.2rem; }
 
 .intro h2 {
@@ -298,5 +298,30 @@ dl.listed.wide dt {
 .object object {
   width: 100%;
   height: 100%; }
+
+.gridlines > div {
+  width: 460px;
+  margin-left: 20px;
+  display: flex;
+  justify-content: space-between; }
+.gridlines article {
+  display: flex; }
+  .gridlines article > div {
+    display: flex;
+    flex-direction: column;
+    height: 480px;
+    position: relative;
+    top: -10px;
+    justify-content: space-between;
+    margin-right: 10px; }
+.gridlines table, .gridlines table td, .gridlines table th {
+  border: 5px solid #cc0000;
+  border-collapse: collapse;
+  padding: 20px; }
+.gridlines table div {
+  height: 100px;
+  width: 100px;
+  border: 3px solid #0000cc;
+  border-radius: 5px; }
 
 /*# sourceMappingURL=style.css.map */
